--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   file_picker: ^8.1.2
   flutter_markdown: ^0.7.3+2
   image_picker: ^1.1.2
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
